--- a/application.yml
+++ b/application.yml
@@ -9,7 +9,7 @@ spec:
   source:
     repoURL: https://github.com/Erinbro/librimem-config.git
     targetRevision: HEAD
-    path: kube
+    path: ./kube
   destination:
     server: https://kubernetes.default.svc
     namespace: default
