Added more files

--- a/application.yml
+++ b/application.yml
@@ -1,19 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: librime-config-app
+  name: librimem-config-app
   namespace: argocd
 spec:
   project: default
-
   source:
-    repoURL: https://github.com/Erinbro/librimem-config.git
+    repoURL: git@github.com:Erinbro/librimem-config.git
     targetRevision: HEAD
     path: ./kube
   destination:
     server: https://kubernetes.default.svc
     namespace: default
-
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
