--- a/argocd.yml
+++ b/argocd.yml
@@ -1,22 +1,24 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: librimem-config-app
+  name: librimem-argocd
   namespace: argocd
 spec:
   project: default
   source:
-    repoURL: git@github.com:Erinbro/librimem-config.git
+    repoURL: https://github.com/Erinbro/librimem-config
     targetRevision: HEAD
-    path: ./kube
+    path: kube
+    directory:
+      recurse: true
   destination:
     server: https://kubernetes.default.svc
-    namespace: default
+    namespace: "*"
+
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
+
     automated:
-      selfHeal: true
-      prune: true
-
-
+      selfHeal: false
+      prune: false
