--- a/kube/cert-manager/cluster-issuer.yml
+++ b/kube/cert-manager/cluster-issuer.yml
@@ -1,13 +1,13 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt-staging
+  name: letsencrypt-cluster-issuer
 spec:
   acme:
-    email: jedo66@protonmail.com
     server: https://acme-v02.api.letsencrypt.org/directory
+    email: jaime-barakat@hotmail.com
     privateKeySecretRef:
-      name: issuer-letsencrypt-staging
+      name: letsencrypt-cluster-issuer-key
     solvers:
       - http01:
           ingress:
