--- a/kube/user-svc.yml
+++ b/kube/user-svc.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: flashcard
+  name: user
 spec:
   type: NodePort
   selector:
-    app: flashcard
+    app: user
   ports:
     - name: http
-      port: 8083
-      targetPort: 8083
+      port: 8082
+      targetPort: 8082
