--- a/kube/certificate2.yml
+++ b/kube/certificate2.yml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: librimem-certificate
-  namespace: cert-manager
+  namespace: default
 spec:
   secretName: letsencrypt-cluster-issuer-key
   dnsNames:
