--- a/kube/certificate2.yml
+++ b/kube/certificate2.yml
@@ -4,9 +4,9 @@ metadata:
   name: librimem-certificate
   namespace: default
 spec:
-  secretName: letsencrypt-cluster-issuer-key
+  secretName: librimem-secret
   dnsNames:
-    - librimem.online
+    - www.librimem.online
   issuerRef:
     name: letsencrypt-cluster-issuer
     kind: ClusterIssuer
