--- a/kube/frontend-svc.yml
+++ b/kube/frontend-svc.yml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: librimem-frontend
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: librimem-frontend
   ports:
