--- a/argocd.yml
+++ b/argocd.yml
@@ -20,5 +20,5 @@ spec:
       - CreateNamespace=true
 
     automated:
-      selfHeal: false
-      prune: false
+      selfHeal: true
+      prune: true
