--- a/kube/postgres.yml
+++ b/kube/postgres.yml
@@ -25,6 +25,10 @@ spec:
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
               name: postgredb
+          resources:
+            limits:
+              cpu: "500m"
+              memory: "256Mi"
       volumes:
         - name: postgredb
           persistentVolumeClaim:
