--- a/kube/user-svc.yml
+++ b/kube/user-svc.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: user
+  name: users
 spec:
   type: NodePort
   selector:
-    app: user
+    app: users
   ports:
     - name: http
       port: 8082
