--- a/kube/readable-depl.yml
+++ b/kube/readable-depl.yml
@@ -8,7 +8,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: users
+      app: readable
   template:
     metadata:
       labels:
